practicas/practica1/ejemplo-con-sintactico/y.output
Nonterminals useless in grammar

   programa
   main
   declaraciones
   lista_variables
   declaracion
   lista_de_id
   tipo_de_dato
   cuerpo_programa
   sentencia
   asignacion
   expresion
   termino
   factor
   escritura
   seleccion
   condicion
   comparador
   iteracion


Terminals unused in grammar

   PYC
   LLAVE_A
   LLAVE_C
   CTE_STR
   CTE_FLOAT
   TYPE_INT
   TYPE_FLOAT
   DECVAR
   ENDDEC
   WRITE
   IF
   ELSE
   WHILE
   OP_MAS
   OP_MENOS
   OP_DIV
   OP_IGUAL
   OP_DISTINTO
   OP_MULT
   OP_MENOR
   OP_MAYOR
   OP_MENORIGUAL
   OP_MAYORIGUAL


Rules useless in grammar

    8 programa: main

    9 main: declaraciones cuerpo_programa
   10     | cuerpo_programa

   11 declaraciones: DECVAR lista_variables ENDDEC

   12 lista_variables: lista_variables declaracion
   13                | declaracion

   14 declaracion: lista_de_id OP_ASIG tipo_de_dato PYC

   15 lista_de_id: ID COMA lista_de_id
   16            | ID

   17 tipo_de_dato: TYPE_INT
   18             | TYPE_FLOAT

   19 cuerpo_programa: cuerpo_programa sentencia
   20                | sentencia

   21 sentencia: asignacion
   22          | escritura
   23          | seleccion
   24          | iteracion

   25 asignacion: ID OP_ASIG expresion PYC

   26 expresion: expresion OP_MAS termino
   27          | expresion OP_MENOS termino
   28          | termino

   29 termino: termino OP_MULT factor
   30        | termino OP_DIV factor
   31        | factor

   32 factor: PAR_A expresion PAR_C
   33       | ID
   34       | CTE_INT
   35       | CTE_FLOAT

   36 escritura: WRITE CTE_STR PYC
   37          | WRITE ID PYC
   38          | WRITE CTE_INT PYC
   39          | WRITE CTE_FLOAT PYC

   40 seleccion: IF PAR_A condicion PAR_C LLAVE_A cuerpo_programa LLAVE_C
   41          | IF PAR_A condicion PAR_C LLAVE_A cuerpo_programa LLAVE_C ELSE LLAVE_A cuerpo_programa LLAVE_C

   42 condicion: ID comparador CTE_INT

   43 comparador: OP_IGUAL
   44           | OP_DISTINTO
   45           | OP_MAYOR
   46           | OP_MAYORIGUAL
   47           | OP_MENOR
   48           | OP_MENORIGUAL

   49 iteracion: WHILE PAR_A condicion PAR_C LLAVE_A cuerpo_programa LLAVE_C


Gramática

    0 $accept: progra $end

    1 progra: asig

    2 asig: ID OP_ASIG promedio

    3 promedio: AVG PAR_A lista PAR_C

    4 lista: lista COMA ID
    5      | lista COMA CTE_INT
    6      | CTE_INT
    7      | ID


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
ID (258) 2 4 7
PYC (259)
COMA (260) 4 5
PAR_A (261) 3
PAR_C (262) 3
LLAVE_A (263)
LLAVE_C (264)
CTE_INT (265) 5 6
CTE_STR (266)
CTE_FLOAT (267)
TYPE_INT (268)
TYPE_FLOAT (269)
DECVAR (270)
ENDDEC (271)
WRITE (272)
IF (273)
ELSE (274)
WHILE (275)
OP_ASIG (276) 2
OP_MAS (277)
OP_MENOS (278)
OP_DIV (279)
OP_IGUAL (280)
OP_DISTINTO (281)
OP_MULT (282)
OP_MENOR (283)
OP_MAYOR (284)
OP_MENORIGUAL (285)
OP_MAYORIGUAL (286)
AVG (287) 3


No terminales con las reglas donde aparecen

$accept (33)
    en la izquierda: 0
progra (34)
    en la izquierda: 1, en la derecha: 0
asig (35)
    en la izquierda: 2, en la derecha: 1
promedio (36)
    en la izquierda: 3, en la derecha: 2
lista (37)
    en la izquierda: 4 5 6 7, en la derecha: 3 4 5


estado 0

    0 $accept: . progra $end

    ID  desplazar e ir al estado 1

    progra  ir al estado 2
    asig    ir al estado 3


estado 1

    2 asig: ID . OP_ASIG promedio

    OP_ASIG  desplazar e ir al estado 4


estado 2

    0 $accept: progra . $end

    $end  desplazar e ir al estado 5


estado 3

    1 progra: asig .

    $default  reduce usando la regla 1 (progra)


estado 4

    2 asig: ID OP_ASIG . promedio

    AVG  desplazar e ir al estado 6

    promedio  ir al estado 7


estado 5

    0 $accept: progra $end .

    $default  aceptar


estado 6

    3 promedio: AVG . PAR_A lista PAR_C

    PAR_A  desplazar e ir al estado 8


estado 7

    2 asig: ID OP_ASIG promedio .

    $default  reduce usando la regla 2 (asig)


estado 8

    3 promedio: AVG PAR_A . lista PAR_C

    ID       desplazar e ir al estado 9
    CTE_INT  desplazar e ir al estado 10

    lista  ir al estado 11


estado 9

    7 lista: ID .

    $default  reduce usando la regla 7 (lista)


estado 10

    6 lista: CTE_INT .

    $default  reduce usando la regla 6 (lista)


estado 11

    3 promedio: AVG PAR_A lista . PAR_C
    4 lista: lista . COMA ID
    5      | lista . COMA CTE_INT

    COMA   desplazar e ir al estado 12
    PAR_C  desplazar e ir al estado 13


estado 12

    4 lista: lista COMA . ID
    5      | lista COMA . CTE_INT

    ID       desplazar e ir al estado 14
    CTE_INT  desplazar e ir al estado 15


estado 13

    3 promedio: AVG PAR_A lista PAR_C .

    $default  reduce usando la regla 3 (promedio)


estado 14

    4 lista: lista COMA ID .

    $default  reduce usando la regla 4 (lista)


estado 15

    5 lista: lista COMA CTE_INT .

    $default  reduce usando la regla 5 (lista)
